# igris

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  gitttt.sh  install.ps1  install.sh  restart-igris.ps1  start-ui.sh
.github/workflows/: release.yml
brain/: core_client.py  igris_pb2.py  llm_client.py  main.py  system_prompt.txt
brain/core/: message.py
brain/proto/: igris.proto
brain/utils/: dialog.py
crates/igris-cli/: Cargo.toml
crates/igris-cli/src/: main.rs
crates/igris-core/: Cargo.toml
crates/igris-core/src/: config.rs  lib.rs  llm.rs  prompt.rs
crates/igris-memory/: Cargo.toml
crates/igris-memory/src/: db.rs  models.rs
crates/igris-skills/: Cargo.toml
crates/igris-skills/src/: obsidian.rs
docs/: index.html
igris-core/: Cargo.toml
igris-core/src/: main.rs
igris-core/src/configs/: config.rs
igris_sdk/: Cargo.toml
igris_sdk/src/: lib.rs
player/: cli.py  daemon.py
player/core/: config.py  controller.py  player.py
player/utils/: yt_downloader.py  ytmusic_api.py
src/: api.rs  db.rs  error.rs  main.rs  registry.rs  supervisor.rs  token_counter.rs
src/configs/: llm.rs
src/core/: agent.rs  chat.rs  llm.rs  markdown.rs  mod.rs  self_improvement.rs  spinner.rs  task.rs  terminal_logger.rs  utils.rs
src/memory/: mod.rs
src/models/: assistant.rs  metadata.rs  mod.rs
src/skills/: gui_skill.rs  memory_skill.rs  mod.rs  shell_executor.rs  telegram_skill.rs  user_profile_skill.rs  voice_skill.rs  web_search_skill.rs
src/voice/: continuous.rs  mod.rs
tests/: memory_skill_tests.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
voice/: .gitignore  main.py  requirements.txt
voice/client/: brain_client.py
voice/core/: stt.py  tts.py
voice/protos/: brain.proto
