[package]
name = "igris"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "blocking"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4.45", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
encoding_rs = "0.8.35"
dirs = "6.0.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
cpal = "0.15"
webrtc-vad = "0.4"
enigo = "0.2"
screenshots = "0.8"
base64 = "0.22"
rustyline = "13.0"
ansi-regex = "0.1"
nnnoiseless = "0.5.2"
ferogram = "0.6.0"
async-trait = "0.1.89"

[target.'cfg(unix)'.dependencies]
libc = "0.2"


