[package]
name = "igris-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
igris-core = { path = "../igris-core" }
igris-memory = { path = "../igris-memory" }
igris-skills = { path = "../igris-skills" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"